--- a/bower.json
+++ b/bower.json
@@ -9,9 +9,11 @@
     "ember-qunit": "0.4.9",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
-    "jquery": "^1.11.3",
+    "jquery": "~2",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0",
-    "active-model-adapter": "~1.13"
+    "active-model-adapter": "~1.13",
+    "ember-data-factory-guy": "~1.13",
+    "jquery-mockjax": "2.0.1"
   }
 }
